--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<input id="inputMsg"/><button onclick="sendMessage()">发送</button>
-	<div>
+	<div style="max-height: 600px; overflow: auto">
 		<ul id="chatContent">
 			
 		</ul>
